[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muxkit"
version = "0.1.0"
description = "Matroska remuxing tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
muxkit = "muxkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/muxkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
